--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">com.custom.widgets</string>
     <string name="tvSetText"> Arial </string>
+    <string name="tvTextWidget"> Text Widget </string>
 </resources>
