--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">com.custom.widgets</string>
     <string name="tvSetText"> Arial </string>
-    <string name="tvTextWidget"> Text Widget </string>
+    <string name="tvTextTitle"> Text Widget </string>
+    <string name="tvTextDescription"> Text Widget </string>
 </resources>
